# Caml_bot

./: .editorconfig  .env.example  .gitignore  .ocamlformat  LICENSE  Makefile  README.md  caml_bot.opam  docker-compose.yaml  dune-project  esy.json  secrets.conf.example
.github/workflows/: main.yml
cmd/: exclamation.json
esy.lock/: index.json
esy.lock/overrides/3b20b4e182b47e30cb2667607c9f9c35/: esy.json
esy.lock/overrides/ef811fadf513170ea0b4934402900f8f/: Readme.md  esy.json
esy.lock/overrides/ef811fadf513170ea0b4934402900f8f/.ci/: steps.sh  verdaccio-config.yaml
esy.lock/overrides/ef811fadf513170ea0b4934402900f8f/esy-test/: package.json
esy.lock/overrides/ef811fadf513170ea0b4934402900f8f/scripts/: package.js
lib/: command.ml  config.ml  dune  helpers.ml  message.ml  parser.ml  parser.mli  storage.ml  twitch_irc.ml  util.ml
lib/bot/: addcmd.ml  config.ml  delcmd.ml  dune  flip.ml  http.ml  node.ml  rr.ml  storage.ml  updcmd.ml  wttr.ml
src/: bot.ml  command.ml  config.ml  dune  file_utils.ml  helpers.ml  http.ml  logger.ml  message.ml  parser.mli  string_utils.ml  string_utils.mli  twitch_irc.ml
src/bot/: addcmd.ml  delcmd.ml  dune  flip.ml  node.ml  sync.ml  trust.ml  untrust.ml  updcmd.ml
src/storage/: database.ml  migrations.ml  storage.ml  storage_command.ml  storage_trusted_users.ml
